[package]
name = "wurds_tui"
version = "0.1.0"
edition = "2021"
description = "A text-based interface to the Wurds game (Wordle clone)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.1", features = ["derive"] }
crossterm = "0.22.1"
rand = "0.8.4"
wurds = { path = "../wurds" }
